# cuda-tests

./: CMakeLists.txt  LICENSE.md  README.md
programs/: CMakeLists.txt
programs/test0/: CMakeLists.txt  main.cu
programs/test1/: CMakeLists.txt  main.cu
